perbaikan bug responsif di nav dan product

--- a/pet-shop/index.html
+++ b/pet-shop/index.html
@@ -5,10 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pet Shop</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles-mobile.css">
+    <link rel="stylesheet" href="styles-tab.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
     <!-- Navigation -->
+     <div id="hamburger">
+        &#9776;
+     </div>
+     <div id="close">
+        &times;
+    </div>
     <nav>
         <div class="logo">
             <a href="#hero"><img src="assets/logo.png" alt="Pet Shop Logo"></a>
@@ -132,6 +140,6 @@
     </div>
     <p>&copy; 2024 RPN Pet Shop. All rights reserved.</p>
 </footer>
-
+<script src="script.js"></script>
 </body>
 </html>
