--- a/pet-shop/index.html
+++ b/pet-shop/index.html
@@ -72,7 +72,7 @@
                     <div class="card-img">
                         <img src="assets/pet-toy-removebg-preview.png" alt="">
                     </div>
-                    <p class="product-description">Whether your furry friend loves to chase, fetch, or chew, we have the perfect toy to keep them entertained and active. Grab it now</p>
+                    <p class="product-description">Whether your furry friend loves to chase, fetch, or chew, we have the perfect toy to keep them entertained and active. Grab it now for playing with your furry friend</p>
                     <img src="assets/wave.svg" alt="">
                 </div>
                 <button class="buy-btn">Buy Now</button>
