logic-nolep: is-ajax-post change h2

--- a/inventory-ajax-post/index.html
+++ b/inventory-ajax-post/index.html
@@ -15,7 +15,7 @@
                 <div class="login-column">
                         <div class="logo-title">
                             <img src="assets/mike.png" alt="Logo" class="logo">
-                            <h2>INVENTORY SYSTEM</h2>
+                            <h2>MIKEY'S HUB</h2>
                         </div>
                         <div class="tab">
                             <button class="tablinks active" onclick="openTab(event, 'Login')">LOGIN</button>
