--- a/inventory-ajax-post/index.html
+++ b/inventory-ajax-post/index.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Inventory Ajax Post</title>
+    <!-- JQUERY -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <!-- Form Validate -->
+    <script src="https://cdn.jsdelivr.net/jquery.validation/1.16.0/jquery.validate.min.js"></script>
   </head>
   <body>
-    <h1>SELAMAT DATANG</h1>
+    <h1 id="welcome"></h1>
+    <button id="logout">Logout</button>
+    <script src="./script.js"></script>
   </body>
 </html>
